simple view fixes

--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -63,7 +63,7 @@
 
 #page_login {
   #contents {
-    margin: 1rem 0;
+    margin: 1rem auto;
 
     .header::before {
       content: 'Planetarion Login ';
