--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -7,6 +7,8 @@
   flex-flow: row wrap;
   align-content: flex-start;
   background: $color-borders;
+  margin: 0;
+  height: unset;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   @include respond-below(sm) {
     grid-row: 1/3;
@@ -24,15 +26,23 @@
   }
 
   > div {
-    flex-basis: 50%;
+    width: 50%;
     padding: 0 0.5rem;
     display: flex;
+    justify-content: space-between;
+    margin: 0 0 .5rem;
   }
 
-  #header_mail,
-  > #header_news {
+  #header_mail {
     padding: 0;
+    order: 1;
   }
+
+  #header_news {
+    padding: 0;
+    order: 2;
+  }
+
 
   span {
     flex-basis: 50%;
@@ -93,7 +103,6 @@
 
   #header_metal {
     order: 5;
-    margin-bottom: 0.25rem;
   }
 
   #header_value {
@@ -102,7 +111,6 @@
 
   #header_crystal {
     order: 7;
-    margin-bottom: 0.25rem;
   }
 
   #header_xp {
@@ -111,7 +119,6 @@
 
   #header_eonium {
     order: 9;
-    margin-bottom: 0.5rem;
   }
 
   #header_score {
@@ -120,7 +127,6 @@
 
   #header_asteroids {
     order: 11;
-    margin-bottom: 0.5rem;
   }
 
   #header_rank {
@@ -128,7 +134,9 @@
   }
 
   #header_tick {
-    flex-basis: 100%;
+    width: 100%;
+    order: 3;
+    margin-bottom: 0.75rem;
 
     span {
       flex-basis: 25%;
@@ -192,12 +200,13 @@
 
 
 #planet_summary {
-  grid-column: 3 / 4;
+  grid-column: 3 / 3;
   background: $color-borders;
   //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
+  height: unset;
   @include respond-below(sm) {
     grid-row: 2/3;
     grid-column: 2 / 2;
