--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -1,8 +1,12 @@
 /* Page content
    -------------------------------------------------------*/
 #contents {
-  grid-column: 2 / 4;
+  grid-column: 2 / 3;
+  grid-column-end: 4;
   margin: 0.5rem 0;
+  background: transparent;
+  border: none;
+  width: auto;
   @include respond-below(sm) {
     grid-row: 3/3;
     grid-column: 2 / 2;
