--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -136,7 +136,6 @@
   #header_tick {
     width: 100%;
     order: 3;
-    margin-bottom: 0.75rem;
 
     span {
       flex-basis: 25%;
@@ -144,11 +143,6 @@
 
     .textlabel {
       margin-left: 50%;
-      padding: 0.5rem;
-    }
-
-    .textvalue {
-      padding-top: 0.5rem;
     }
   }
 
@@ -253,7 +247,7 @@
   margin: 0 0.5rem 0 8rem;
   padding: 0;
   text-align: left;
-  flex-basis: 10rem;
+  width: 100%;
   font-size: $text-small;
   @include respond-below(sm) {
     margin: 0;
