--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -26,7 +26,7 @@ $color-links: $color-primary;
 $color-links-hover: $color-black;
 $color-text: $color-offwhite;
 //
-$color-own: aqua;
+$color-own: rgb(0, 130, 255);
 $color-positive: limegreen;
 $color-neutral: orange;
 $color-negative: red;
