--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -50,9 +50,9 @@
 
 .menu_grp > span {
   display: block;
-  margin-bottom: 0.25rem;
+  margin-bottom: .25rem;
   border-bottom: 1px solid $color-primary;
-  padding: 4px 9px;
+  padding: .25rem .5rem;
   background: #19222b;
   font-size: $text-small;
   font-weight: bold;
