--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -116,7 +116,7 @@
 
 .progress_bar {
   height: 1.5rem;
-  background: $color-primary;
+  background: $color-progress-completed;
   //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
 }
 
