--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -94,7 +94,7 @@ span.small.notice_warning {
     &:first-child {
       tr {
         &:first-child th {
-          border-bottom: 1px solid $color-black-light;
+          border-bottom: 1px solid $color-offwhite;
           padding-bottom: 0.25rem;
         }
 
