--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -40,3 +40,6 @@ $color-cathaar: #4d88bc;
 $color-xandathrii: #2ba87e;
 $color-zikonian: #c93716;
 $color-eitraides: #111111;
+//
+$color-progress-completed: #378059;
+$color-progress-expected: rgba(#FAC05E, 0.4);
