--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -30,7 +30,7 @@ input[type="submit"],
   color: black !important;
   background: $color-primary !important;
   //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
-  border: 1px solid $color-primary !important;
+  border: 1px solid rgba($color-primary, .5) !important;
   cursor: pointer;
   box-shadow: none;
   border-radius: 0;
