--- a/scss/components/_covert_ops.scss
+++ b/scss/components/_covert_ops.scss
@@ -20,7 +20,7 @@
         display: inline-block;
         padding: 0.25rem 1rem;
         color: $color-primary;
-        border: 1px solid $color-primary;
+        border: 1px solid rgba($color-primary, .5);
 
         &:hover {
           color: black;
