--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -297,7 +297,7 @@ option {
 #alliance_menu {
   a {
     display: inline-block;
-    margin: 8px 0;
+    margin: .5rem 0;
     padding: 0.25rem 0.5rem;
     color: $color-primary;
     //border: 1px solid $color-primary;
