--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -10,7 +10,6 @@
   grid-row: 1 / 3;
   padding: 1rem 0;
   background: $color-borders;
-  //background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
   @include respond-below(sm) {
     grid-column: 1 / 2;
     grid-row: 1/4;
@@ -51,10 +50,12 @@
 .menu_grp > span {
   display: block;
   margin-bottom: .25rem;
-  border-bottom: 1px solid $color-primary;
   padding: .25rem .5rem;
   background: #19222b;
   font-size: $text-small;
   font-weight: bold;
   text-transform: uppercase;
+  border-bottom: 1px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 100%);
+  border-image-slice: 1;
 }
