--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -61,6 +61,10 @@ h2 {
   color: $color-offwhite;
   background: $color-borders;
   background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
+  //border: 1px solid rgba($color-primary, 0.5);
+  border: 1px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, rgba(82,165,248,0.5) 50%, transparent 100%);
+  border-image-slice: 1;
 
   a:hover {
     color: rgba($color-primary, .8);
@@ -70,8 +74,10 @@ h2 {
 
 #notice {
   background-color: black;
-  border: 1px solid rgba($color-primary, .5);
   margin-top: 0.5rem;
+  border: 1px solid transparent;
+  border-image: linear-gradient(to right, transparent 0%, rgba(82,165,248,0.5) 50%, transparent 100%);
+  border-image-slice: 1;
 
   .header,
   .footer {
@@ -136,7 +142,7 @@ span.center {
 #dships_box {
   background: $color-borders !important;
   color: $color-primary !important;
-  border: 1px solid $color-primary;
+  border: 1px solid rgba($color-primary, .5);
   padding: 0.25rem 0.5rem;
   white-space: initial;
   box-shadow: 3px 3px 5px 0 rgba(0, 0, 0, 0.4);
