--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -130,7 +130,7 @@
 
 #load_box {
   background: $color-borders;
-  border: 1px solid $color-primary;
+  border: 1px solid rgba($color-primary, .5);
   color: $color-offwhite;
 }
 
