--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -192,8 +192,8 @@
         .ally_def_details,
         .ally_def_attackers {
           .alliance_def_valid {
-            border: 1px solid #00FF00 !important;
-            box-shadow: inset 0 0 7px 1px #00FF00;
+            border: 1px solid rgba($color-positive, .5) !important;
+            box-shadow: inset 0 0 7px 1px rgba($color-positive, .25);
           }
         }
 
