--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -63,8 +63,12 @@ h2 {
   background: linear-gradient(180deg, $color-borders 0%, $color-borders 15%, $color-borders 100%) !important;
   //border: 1px solid rgba($color-primary, 0.5);
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba(82,165,248,0.5) 50%, transparent 100%);
+  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 50%, transparent 100%);
   border-image-slice: 1;
+
+  &:empty {
+    display: none;
+  }
 
   a:hover {
     color: rgba($color-primary, .8);
@@ -74,9 +78,10 @@ h2 {
 
 #notice {
   background-color: black;
+  padding: .75rem;
   margin-top: 0.5rem;
   border: 1px solid transparent;
-  border-image: linear-gradient(to right, transparent 0%, rgba(82,165,248,0.5) 50%, transparent 100%);
+  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 50%, transparent 100%);
   border-image-slice: 1;
 
   .header,
