--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -227,9 +227,8 @@
   &:before {
     display: block;
     content: 'Planetary Development ';
-    width: calc(100% - .4375rem);
+    width: calc(100% - 1rem);
     padding: .5rem .5rem .6125rem;
-    margin: -.3125rem -.25rem 0;
     font-size: $text-small;
     text-transform: uppercase;
     font-weight: bold;
