--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -131,35 +131,40 @@
               flex: 2;
 
               a {
-                border: 1px solid rgba(146, 146, 146, 0.3);
                 display: inline-flex;
-                width: 15px;
-                height: 15px;
+                width: 17px;
+                height: 17px;
                 align-items: center;
                 justify-content: center;
                 border-radius: 4px;
                 color: black !important;
                 margin-right: 3px;
+                background: $color-background;
+                font-size: 1rem;
+                line-height: 1rem;
 
                 &:last-child {
                   margin-right: 0;
                 }
 
                 &.scan_age_new {
-                  background: rgba($color-positive, 0.7);
+                  border: 1px solid rgba($color-positive, 0.7);
+                  color: rgba($color-positive, 0.7) !important;
                 }
 
                 &.scan_age_older {
-                  background: rgba($color-neutral, 0.55);
+                  border: 1px solid rgba($color-neutral, 0.7);
+                  color: rgba($color-neutral, 0.7) !important;
                 }
 
                 &.scan_age_old {
-                  background: rgba(255, 255, 0, 0.7);
+                  border: 1px solid rgba(255, 255, 0, 0.7);
+                  color: rgba(255, 255, 0, 0.7) !important;
                 }
 
                 &.scan_age_ancient {
-                  background: rgba($color-negative, 0.25);
-                  color: white !important;
+                  border: 1px solid rgba($color-negative, .5);
+                  color: rgba($color-negative, .5) !important;
                 }
               }
             }
@@ -207,7 +212,16 @@
         .ally_def_attacker_coords,
         .ally_def_defender_coords {
           width: auto;
-          padding: 2px 12px 2px 2px;
+          padding: 0 4px;
+        }
+
+        .ally_def_target,
+        .ally_def_attacker,
+        .ally_def_defender,
+        .ally_def_attacker_intel,
+        .ally_def_fleetcatch_fleet {
+          display: flex;
+          align-items: center;
         }
 
         .mission_attack {
@@ -223,6 +237,7 @@
           background: unset;
           opacity: 0.5;
         }
+
       }
     }
   }
