--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -1,5 +1,24 @@
 /* FLEETS
    -------------------------------------------------------*/
+#page_fleets {
+  #base_behavior {
+    p {
+      color: $color-offwhite;
+      padding: 0;
+    }
+
+    input[type="submit"] {
+      margin: 0;
+    }
+  }
+
+  form {
+    th,
+    td {
+      background: $color-borders;
+    }
+  }
+}
 
 #fleet_overview {
   tr {
@@ -19,17 +38,6 @@
         }
       }
     }
-  }
-}
-
-#base_behavior {
-  p {
-    color: $color-offwhite;
-    padding: 0;
-  }
-
-  input[type="submit"] {
-    margin: 0;
   }
 }
 
