--- a/scss/components/_overview.scss
+++ b/scss/components/_overview.scss
@@ -135,10 +135,6 @@
 }
 
 
-#mfc .maintext {
-  text-align: center;
-}
-
 .info_header {
   color: $color-offwhite;
   text-align: left;
@@ -170,15 +166,27 @@
 
 .mission_attack {
   color: #FF0000;
-  background-color: rgba($color-negative, .14);
+  background: rgba($color-negative, .14);
+
+  .mission_attack {
+    background: transparent;
+  }
 }
 
 .mission_return {
   opacity: .5;
   color: #888888;
+
+  .mission_return {
+    opacity: 1;
+  }
 }
 
 .mission_defend {
   color: #00AA00;
   background: rgba($color-positive, 0.14);
+
+  .mission_defend {
+    background: transparent;
+  }
 }
