--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -9,7 +9,7 @@ $color-primary-dark: darken($color-primary, 20%);
 $color-secondary: #010304;
 //
 $color-white: #fff;
-$color-offwhite: #FEFEFE;
+$color-offwhite: #cccccc;
 //
 $color-grey: grey;
 $color-grey-light: grey;
