--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -96,6 +96,7 @@
           }
 
           .ally_def_target_summary {
+            padding-right: 4px;
             flex: 3;
 
             span {
@@ -105,7 +106,7 @@
         }
 
         .ally_def_attackers {
-          font-size: 13px;
+          font-size: 0.9rem;
 
           > div {
             > div {
@@ -121,6 +122,8 @@
               flex: 2;
               display: flex;
               align-items: center;
+              overflow: hidden;
+              margin-right: 4px;
             }
 
             .ally_def_attacker_race {
@@ -190,9 +193,27 @@
 
             .ally_def_attacker_classes {
               flex: 2;
+              color: transparent;
+              text-transform: uppercase;
+
+              a {
+                padding-right: 3px;
+
+                &:last-child {
+                  padding-right: 0;
+                }
+              }
+
+              .btn-default {
+                color: $color-primary !important;
+                background-color: transparent !important;
+                border-color: transparent !important;
+                font-size: 0.9rem !important;
+              }
             }
 
             .ally_def_attacker_intel {
+              padding-right: 4px;
               flex: 2;
               color: $color-offwhite;
             }
@@ -205,11 +226,92 @@
             border: 1px solid rgba($color-positive, .5) !important;
             box-shadow: inset 0 0 7px 1px rgba($color-positive, .25);
           }
+
+          .ally_def_details_classes {
+            .alliance_def_valid {
+              border: none !important;
+              box-shadow: none !important;
+
+              input[type="checkbox"] {
+                border: 1px solid rgba(50, 205, 50, 0.5) !important;
+                box-shadow: inset 0 0 7px 1px rgba(50, 205, 50, 0.25);
+
+                &:before {
+                  color: rgb(50, 205, 50);
+                }
+              }
+            }
+          }
         }
 
         .ally_def_details {
+          .ally_def_details_fleet {
+            display: flex;
+            align-items: center;
+            padding-left: 4px;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+
+            .ally_def_details_classes {
+              display: flex;
+              justify-content: flex-end;
+              align-items: center;
+              letter-spacing: 1px;
+
+              form {
+                display: flex;
+                align-items: center;
+              }
+            }
+          }
+
+          .ally_def_details_bcalc {
+            form {
+              text-transform: uppercase;
+              margin-left: 4px;
+              font-size: 0;
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+
+              &:before {
+                content: "BATTLE CALC:";
+                position: relative;
+                display: inline;
+                font-size: 0.75rem;
+                padding-right: 4px;
+                letter-spacing: 1px;
+              }
+
+              input[type='text'] {
+                width: 215.5px;
+              }
+            }
+          }
+
+          .ally_def_details_notes {
+            margin-top: 4px;
+
+            form {
+              display: flex;
+              align-items: flex-end;
+              justify-content: flex-end;
+
+              textarea {
+                width: 100%;
+                margin: 0 0 4px 4px;
+              }
+
+              input[type="button"] {
+                margin: 2px 4px 4px;
+                min-width: 110px;
+              }
+            }
+          }
+
           input[type="button"] {
-            margin: 2px 0;
+            margin: 2px 4px;
+            width: 110px;
           }
         }
 
