--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -14,6 +14,12 @@ select,
   color: $color_text;
   font-size: 1rem;
   height: 1.5rem;
+  transition: ease all 0.3s;
+
+  &:focus {
+    outline: none;
+    border: 1px solid $color-primary;
+  }
 }
 
 input[type="radio"] {
