--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -24,7 +24,8 @@
     padding: 0 0 0.15rem;
 
     &#menu_overview,
-    &#menu_preferences {
+    &#menu_preferences,
+    &#menu_logout {
       padding: 0 0.5rem 0.15rem;
     }
 
