--- a/scss/components/_production.scss
+++ b/scss/components/_production.scss
@@ -21,7 +21,7 @@
         padding: 0.25rem 1rem;
 
         &:hover {
-          color: $color-offwhite;
+          color: black;
           background: $color-primary;
           //background: linear-gradient(135deg, $color-primary 0%, $color-primary-dark 100%);
           text-decoration: none;
